# tyny

./: .gitignore  README.md  dev.sh  pyproject.toml  tyny.code-workspace
.github/workflows/: fly.prod.yml  fly.staging.yml  fly.yml
app/: main.py
app/routers/: websocket.py
app/templates/: index.html
backend/: .dockerignore  .gitignore  Dockerfile  dev.sh  fly.prod.toml  fly.staging.toml  fly.toml  pyproject.toml
backend/.github/workflows/: fly.yml
backend/app/: config.py  dependencies.py  globals.py  main.py
backend/app/lib/: dependencies.py  language_codes.py  sse.py
backend/app/routers/: languages.py  parakeet_websocket.py  rooms.py  websocket.py
backend/app/services/: rooms.py  transcription.py  translation.py
backend/scripts/: nemo_test.py  stream_audio.py
frontend/: README.md  index.html  nuxt.config.ts  package.json  pnpm-lock.yaml
frontend/app/: root.tsx
frontend/components/: RecordingToolbar.vue  SpeachActivityIcon.vue  SubscriberToolbar.vue
frontend/composables/: useAudioDevices.ts  usePostAudio.ts  useQR.ts  useTTEvents.ts
frontend/pages/: index.vue
frontend/src/: main.ts
frontend/stores/: stream-status.ts  toolbar.ts  utterances.ts
frontend/utils/: api-client.ts  api.ts  audio-pipeline.ts  audio-utils.ts  utterance-segmenter.ts
nuxt-fe/components/: RecordingToolbar.vue  SpeachActivityIcon.vue  TextDisplay.vue
rr-frontend/: package.json  pnpm-lock.yaml
rrfe/: package.json  pnpm-lock.yaml  vite.config.ts
transcription-service/: .gitignore  Dockerfile  README.md  load_nemo_model.py  parakeet.py  pyproject.toml  run.py
(+71 files in other folders)
