[project]
name = "tyny"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.7",
    "faster-whisper>=1.1.1",
    "jinja2>=3.1.5",
    "langchain[groq]>=0.3.19",
    "langchain-groq>=0.2.4",
    "librosa>=0.10.2.post1",
    "mlx-whisper>=0.4.2",
    "pydantic-settings>=2.7.1",
    "soundfile>=0.13.1",
    "websockets>=14.2",
    "silero-vad>=5.1.2",
    "torch>=2.6.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
]

