[project]
name = "tyny"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.7",
    "librosa>=0.10.2.post1",
    "pydantic-settings>=2.7.1",
    "soundfile>=0.13.1",
    "websockets>=14.2",
    "datasets[audio]>=3.6.0",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
]

